force-app/main/default/objects/MessagingSession/fields/Batch_Processed__c.field-meta.xml
<CustomField>
    <fullName>Batch_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Processed</label>
    <type>Checkbox</type>
</CustomField>