force-app/main/default/objects/MessagingSession/fields/Conversation_Transcript_Body__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Transcript_Body__c</fullName>
    <label>Conversation Transcript Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>