force-app/main/default/objects/MessagingSession/fields/Messaging_End_User__c.field-meta.xml
<CustomField>
    <fullName>Messaging_End_User__c</fullName>
    <formula>MessagingEndUser.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Messaging End User</label>
    <type>Text</type>
</CustomField>