force-app/main/default/objects/MessagingSession/fields/RS_Callpreferance__c.field-meta.xml
<CustomField>
    <fullName>RS_Callpreferance__c</fullName>
    <label>Call preferance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Message</fullName>
            </value>
            <value>
                <fullName>Alternate Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>