force-app/main/default/objects/MessagingSession/fields/RS_Customer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>RS_Customer_Account_Number__c</fullName>
    <label>Customer Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>