force-app/main/default/objects/MessagingSession/fields/RS_Customer_authenticated__c.field-meta.xml
<CustomField>
    <fullName>RS_Customer_authenticated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Identified?</label>
    <type>Checkbox</type>
</CustomField>