force-app/main/default/objects/MessagingSession/fields/RS_Customer_reachout_reason__c.field-meta.xml
<CustomField>
    <fullName>RS_Customer_reachout_reason__c</fullName>
    <label>Customer reachout reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ExistingCase</fullName>
            </value>
            <value>
                <fullName>NewCase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>