force-app/main/default/objects/MessagingSession/fields/RS_Customer_verified__c.field-meta.xml
<CustomField>
    <fullName>RS_Customer_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer verified?</label>
    <type>Checkbox</type>
</CustomField>