force-app/main/default/objects/MessagingSession/fields/RS_Existing_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>RS_Existing_Case_Number__c</fullName>
    <label>Existing Case Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>