force-app/main/default/objects/MessagingSession/fields/RS_Link_Valid__c.field-meta.xml
<CustomField>
    <fullName>RS_Link_Valid__c</fullName>
    <formula>IF((6 - ((NOW() -  RS_Switching_Requested_Time__c) * 24))&gt;0 , (6 - ((NOW() -  RS_Switching_Requested_Time__c) * 24)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Valid for(hr)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>