force-app/main/default/objects/MessagingSession/fields/RS_MessagingIntent__c.field-meta.xml
<CustomField>
    <fullName>RS_MessagingIntent__c</fullName>
    <label>Issue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>