force-app/main/default/objects/MessagingSession/fields/RS_ObjectFormula__c.field-meta.xml
<CustomField>
    <fullName>RS_ObjectFormula__c</fullName>
    <formula>if(Case.Id&lt;&gt;&apos;&apos;,&quot;/&quot; + Case.Id,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ObjectFormula</label>
    <type>Text</type>
</CustomField>