force-app/main/default/objects/MessagingSession/fields/RS_Sub_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>RS_Sub_Issue_Type__c</fullName>
    <label>Sub Issue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>