force-app/main/default/objects/MessagingSession/fields/RS_Switching_Status__c.field-meta.xml
<CustomField>
    <fullName>RS_Switching_Status__c</fullName>
    <label>Switching Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>