force-app/main/default/objects/MessagingSession/fields/RS_switchtovoice__c.field-meta.xml
<CustomField>
    <fullName>RS_switchtovoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>switch to voice</label>
    <type>Checkbox</type>
</CustomField>