force-app/main/default/objects/MessagingSession/fields/RS_Total_duration__c.field-meta.xml
<CustomField>
    <fullName>RS_Total_duration__c</fullName>
    <formula>((EndTime-StartTime)*24*60*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>